--- a/print.html
+++ b/print.html
@@ -190,7 +190,16 @@
 <h3 id="我的-rustlings-521-版本解决方案"><a class="header" href="#我的-rustlings-521-版本解决方案">我的 rustlings 5.2.1 版本解决方案</a></h3>
 <p><a href="https://github.com/M4n5ter/rustlings-solutions">rustlings 5.2.1 解决方案</a></p>
 <h2 id="我的-rust-相关-vscode-拓展以及配置"><a class="header" href="#我的-rust-相关-vscode-拓展以及配置">我的 rust 相关 vscode 拓展以及配置</a></h2>
-<p>![]</p>
+<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/rust_extention1.png?raw=true" alt="" /></p>
+<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/rust_extention2.png?raw=true" alt="" /></p>
+<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/rust_extention3.png?raw=true" alt="" /></p>
+<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/rust_extention4.png?raw=true" alt="" /></p>
+<p>以及一些设置:</p>
+<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/settings_1.png?raw=true" alt="" /></p>
+<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/settings_2.png?raw=true" alt="" /></p>
+<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/settings_3.png?raw=true" alt="" /></p>
+<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/settings_4.png?raw=true" alt="" /></p>
+<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/settings_5.png?raw=true" alt="" /></p>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h3 id="简介"><a class="header" href="#简介">简介</a></h3>
 <p>Tower 是一个专注于对网络编程进行抽象的框架，将网络编程中的各行为进行抽象从而提高代码复用率。</p>
