--- a/rust/mini-redis/hello_tokio.html
+++ b/rust/mini-redis/hello_tokio.html
@@ -76,7 +76,7 @@
 
     <nav id="sidebar" class="sidebar" aria-label="Table of contents">
         <div class="sidebar-scrollbox">
-            <ol class="chapter"><li class="chapter-item expanded "><a href="../../intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="../../go/go.html"><strong aria-hidden="true">2.</strong> GO</a></li><li class="chapter-item expanded "><a href="../../rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item expanded "><a href="../../rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../rust/mini-redis/hello_tokio.html" class="active"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../issues/issues.html"><strong aria-hidden="true">4.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/docker/docker.html"><strong aria-hidden="true">4.1.</strong> docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/docker/docker_issues.html"><strong aria-hidden="true">4.1.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../../issues/mysql/mysql.html"><strong aria-hidden="true">4.2.</strong> mysql</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/mysql/mysql_issues.html"><strong aria-hidden="true">4.2.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../../issues/gitea/gitea.html"><strong aria-hidden="true">4.3.</strong> gitea</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/gitea/gitea_issues.html"><strong aria-hidden="true">4.3.1.</strong> 问题及解决方案</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../links/links.html"><strong aria-hidden="true">5.</strong> Links</a></li><li class="chapter-item expanded "><a href="../../math/math.html"><strong aria-hidden="true">6.</strong> Math</a></li></ol>
+            <ol class="chapter"><li class="chapter-item expanded "><a href="../../intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="../../go/go.html"><strong aria-hidden="true">2.</strong> GO</a></li><li class="chapter-item expanded "><a href="../../rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item expanded "><a href="../../rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../rust/mini-redis/hello_tokio.html" class="active"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li><li class="chapter-item "><a href="../../rust/mini-redis/spawning.html"><strong aria-hidden="true">3.2.2.</strong> Spawning</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../issues/issues.html"><strong aria-hidden="true">4.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/docker/docker.html"><strong aria-hidden="true">4.1.</strong> docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/docker/docker_issues.html"><strong aria-hidden="true">4.1.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../../issues/mysql/mysql.html"><strong aria-hidden="true">4.2.</strong> mysql</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/mysql/mysql_issues.html"><strong aria-hidden="true">4.2.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../../issues/gitea/gitea.html"><strong aria-hidden="true">4.3.</strong> gitea</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/gitea/gitea_issues.html"><strong aria-hidden="true">4.3.1.</strong> 问题及解决方案</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../links/links.html"><strong aria-hidden="true">5.</strong> Links</a></li><li class="chapter-item expanded "><a href="../../math/math.html"><strong aria-hidden="true">6.</strong> Math</a></li></ol>
         </div>
         <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
     </nav>
@@ -174,7 +174,7 @@
                 </div>
                 <main>
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<h1 id="hello-tokio"><a class="header" href="#hello-tokio">Hello Tokio</a></h1>
+<h2 id="hello-tokio"><a class="header" href="#hello-tokio">Hello Tokio</a></h2>
 <p>我们将从编写一个非常基本的 <code>Tokio</code> 应用程序开始。它将连接到 <code>Mini-Redis</code> 服务器，设置 <code>key</code> <code>hello</code> 的值为 <code>world</code> 。然后它将读回 <code>key</code>。这将使用 <code>Mini-Redis</code> 的客户端库完成。</p>
 <h2 id="代码"><a class="header" href="#代码">代码</a></h2>
 <hr />
@@ -182,6 +182,146 @@
 <pre><code class="language-zsh">cargo new my-redis
 cd my-redis
 </code></pre>
+<h3 id="添加依赖"><a class="header" href="#添加依赖">添加依赖</a></h3>
+<p>接下来打开 <code>Cargo.toml</code> 并把下面的内容添加到 <code>[dependencies]</code> 下：</p>
+<pre><code class="language-toml">tokio = { version = &quot;1&quot;, features = [&quot;full&quot;] }
+mini-redis = &quot;0.4&quot;
+</code></pre>
+<h3 id="写代码"><a class="header" href="#写代码">写代码</a></h3>
+<p>然后打开 <code>main.rs</code> 并将文件的内容替换成下面的：</p>
+<pre><pre class="playground"><code class="language-rust">use mini_redis::{client, Result};
+
+#[tokio::main]
+async fn main() -&gt; Result&lt;()&gt; {
+    // 向 mini-redis 的地址打开一个连接.
+    let mut client = client::connect(&quot;127.0.0.1:6379&quot;).await?;
+
+    // 设置一个叫 `hello` 的 key，它的内容是 `world`
+    client.set(&quot;hello&quot;, &quot;world&quot;.into()).await?;
+
+    // 去 get 这个 `hello`
+    let result = client.get(&quot;hello&quot;).await?;
+
+    println!(&quot;从服务端得到了值; result={:?}&quot;, result);
+
+    Ok(())
+}
+</code></pre></pre>
+<p>确保 <code>Mini-Redis server</code> 正在运行，找个单独的终端窗口执行:</p>
+<pre><code class="language-zsh">mini-redis-server
+</code></pre>
+<p>现在，让我们运行我门的 <code>my-redis</code> 应用程序。</p>
+<pre><code class="language-zsh">❯ cargo run         
+    Finished dev [unoptimized + debuginfo] target(s) in 0.15s
+     Running `target/debug/my-redis`
+从服务端得到了值; result=Some(b&quot;world&quot;)
+</code></pre>
+<p>这样便是成功了，也算是即将要开始 coding 了！</p>
+<h2 id="看看具体发生什么"><a class="header" href="#看看具体发生什么">看看具体发生什么</a></h2>
+<p>让我们回顾一下刚刚做的事情，代码量不多，但是其实发生了很多事情。</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>let mut client = client::connect(&quot;127.0.0.1:6379&quot;).await?;
+<span class="boring">}
+</span></code></pre></pre>
+<p><code>client::connect</code> 函数是由 <code>mini_redis</code> 这个 crate 提供的。它通过<strong>异步</strong>的方式向指定的地址建立一个 TCP 连接。一旦连接成功建立了，将会返回一个 <code>Client</code> handle(中文叫句柄)（这里给它起了个名 &quot;client&quot;）。</p>
+<p>即使这个操作是<strong>异步</strong>执行的，但是我们写的这个代码看起来像是<strong>同步</strong>的。通过 <code>.await</code> 操作符来表明这是一个异步操作。</p>
+<h3 id="何为异步编程"><a class="header" href="#何为异步编程">何为异步编程？</a></h3>
+<p>相信看过 <code>The book</code> 或者 <code>Rust course</code> 的大伙都知道，下面就贴原文啦～</p>
+<blockquote>
+<p>Most computer programs are executed in the same order in which they are written. The first line executes, then the next, and so on. With synchronous programming, when a program encounters an operation that cannot be completed immediately, it will block until the operation completes. For example, establishing a TCP connection requires an exchange with a peer over the network, which can take a sizeable amount of time. During this time, the thread is blocked.</p>
+<p>With asynchronous programming, operations that cannot complete immediately are suspended to the background. The thread is not blocked, and can continue running other things. Once the operation completes, the task is unsuspended and continues processing from where it left off. Our example from before only has one task, so nothing happens while it is suspended, but asynchronous programs typically have many such tasks.</p>
+<p>Although asynchronous programming can result in faster applications, it often results in much more complicated programs. The programmer is required to track all the state necessary to resume work once the asynchronous operation completes. Historically, this is a tedious and error-prone task.</p>
+</blockquote>
+<p>当然还有机翻可供粗略观摩:</p>
+<blockquote>
+<p>大多数计算机程序都是按照它们编写的顺序执行的。第一行执行，然后是下一行，依此类推。使用同步编程，当程序遇到不能立即完成的操作时，它会阻塞，直到操作完成。例如，建立传输控制协议需要通过网络与对等方进行交换，这可能需要相当长的时间。在此期间，线程被阻塞。
+对于异步编程，不能立即完成的操作会被挂起到后台。线程不会被阻塞，并且可以继续运行其他事情。一旦操作完成，任务就会被取消挂起，并从它停止的地方继续处理。我们之前的示例只有一个任务，所以挂起时什么都不会发生，但是异步程序通常有许多这样的任务。
+虽然异步编程可以带来更快的应用程序，但它通常会导致更复杂的程序。一旦异步操作完成，程序员需要跟踪恢复工作所需的所有状态。从历史上看，这是一项乏味且容易出错的任务。</p>
+</blockquote>
+<h3 id="编译期的绿色线程compile-time-green-threading"><a class="header" href="#编译期的绿色线程compile-time-green-threading">编译期的绿色线程(Compile-time green-threading)</a></h3>
+<blockquote>
+<p><code>green-threading</code> 我的理解是一种非常轻量的“线程”，比如协程(<code>coroutine</code>)，以及直接被融入 <code>Go runtime</code> 的 <code>goroutine</code>（类似 coroutine，但又不同） 。</p>
+</blockquote>
+<p>Rust 通过叫作 <strong><code>async/await</code></strong> 的特征来实现异步编程。执行异步操作的函数用 <strong><code>async</code></strong> 关键字来标记。在我们的示例中，connect函数是这样定义的：</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use mini_redis::Result;
+use mini_redis::client::Client;
+use tokio::net::ToSocketAddrs;
+
+pub async fn connect&lt;T: ToSocketAddrs&gt;(addr: T) -&gt; Result&lt;Client&gt; {
+    // ...
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p><strong><code>async fn</code></strong> 这样的定义方式看起来像是一个常规的同步函数，但是以异步的方式运行。</p>
+<p>Rust 在<strong>编译期将</strong> <strong><code>async fn</code></strong> 转化为一个异步运行的 <code>routine</code> （不是 <code>coroutine</code>，不要理解错误）。</p>
+<p>在 <code>async fn</code> 中对 <code>.await</code> 的任何调用都会将控制权返回给线程（即让出当前线程），此时这个操作会被放在后台，而线程可能会去做一些别的事情。</p>
+<blockquote>
+<p>尽管也有其它语言实现了 <code>async/await</code> ，但 Rust 采用了一种独特的方法。</p>
+<p>大多情况下，Rust 的异步操作表现为 <strong><code>lazy</code></strong>，这导致了不同于其它语言的运行时语义。</p>
+</blockquote>
+<p>如果还是不太明白，没有关系！我们将会在这整个教程中探索到更多关于 <strong><code>async/await</code></strong> 的知识。</p>
+<h3 id="使用-asyncawait"><a class="header" href="#使用-asyncawait">使用 <code>async/await</code></a></h3>
+<p><strong>异步函数</strong>的调用与任何其他Rust函数一样。但是，调用这些函数不会导致函数体执行。换而言之，调用<strong>异步函数</strong>会返回一个代表这个操作的值（在概念上类似于一个没有参数的闭包）。</p>
+<p>如果要真正地去执行这个操作，需要对这个返回值使用 <code>.await</code> 操作符。</p>
+<p>就像下面这样：</p>
+<pre><pre class="playground"><code class="language-rust">async fn say_world() {
+    println!(&quot;world&quot;);
+}
+
+#[tokio::main]
+async fn main() {
+    // 直接调用 `say_world()` 并不会执行它的函数体。
+    let op = say_world();
+
+    // 这个 println! 会先出现。
+    println!(&quot;hello&quot;);
+
+    // 对 `op` 调用 `.await`。
+    op.await;
+}
+</code></pre></pre>
+<p>输出会是下面这样的：</p>
+<pre><code class="language-zsh">hello
+world
+</code></pre>
+<p><code>async fn</code> 的返回值是实现 <code>Future</code> trait的匿名类型。</p>
+<p><code>Future</code> 可以被看作是一个会在未来的某个时间点被执行的东西。</p>
+<h3 id="异步的-main-函数"><a class="header" href="#异步的-main-函数">异步的 <code>main</code> 函数</a></h3>
+<p><code>main</code> 函数与大多数的 Rust crate 不同，它被用来启动一个应用程序。</p>
+<ol>
+<li>
+<p>它是一个 <strong><code>async fn</code></strong></p>
+</li>
+<li>
+<p>它是用 <code>#[tokio::main]</code> 来注释的</p>
+</li>
+</ol>
+<p>当我们想进入一个异步的上下文，会使用 <strong><code>async fn</code></strong>。然而，异步函数必须被一个 <strong><code>runtime</code></strong> 所执行（tokio 就是 Rust 社区大名鼎鼎的异步运行时）。<strong><code>runtime</code></strong> 包括异步任务调度器、提供事件 I/O、计时器等。<strong><code>runtime</code></strong> 不会自动启动，所以 <code>main</code> 函数需要去启动它。</p>
+<p><code>#[tokio::main]</code> 是一个宏。它将 <code>async fn main()</code> 转化为一个同步<code>fn main()</code>，初始化了一个 <code>runtime</code> 实例并且执行了这个异步 main 函数。</p>
+<p>例如以下内容：</p>
+<pre><pre class="playground"><code class="language-rust">#[tokio::main]
+async fn main() {
+    println!(&quot;hello&quot;);
+}
+</code></pre></pre>
+<p>被转化成：</p>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    let mut rt = tokio::runtime::Runtime::new().unwrap();
+    rt.block_on(async {
+        println!(&quot;hello&quot;);
+    })
+}
+</code></pre></pre>
+<p><code>tokio runtime</code> 的细节将在后面介绍。</p>
+<h3 id="cargo-features"><a class="header" href="#cargo-features">Cargo features</a></h3>
+<p>在本教程引入 <code>tokio</code> 依赖时，<code>full</code> feature flag 被启用了。</p>
+<pre><code class="language-toml">tokio = { version = &quot;1&quot;, features = [&quot;full&quot;] }
+</code></pre>
+<p><code>Tokio</code> 有很多功能（<code>TCP</code>、<code>UDP</code>、<code>Unix sockets</code>、<code>timer</code>、<code>sync utilities</code>、<code>multiple scheduler types</code> 等）。并非所有应用程序都需要所有功能(<code>full</code>)。当尝试优化编译时间或最终应用程序占用空间时，应用程序可以决定只选择它用到的那些功能。</p>
+<p>目前，我们在依赖 <code>tokio</code> 时使用 <code>full</code> feature，来方便 code。</p>
 
                     <div id="giscus-container"></div>
                 </main>
@@ -192,7 +332,7 @@ cd my-redis
                         title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../../issues/issues.html" class="mobile-nav-chapters next"
+                    <a rel="next" href="../../rust/mini-redis/spawning.html" class="mobile-nav-chapters next"
                         title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
@@ -206,7 +346,7 @@ cd my-redis
                 aria-label="Previous chapter" aria-keyshortcuts="Left">
                 <i class="fa fa-angle-left"></i>
             </a>
-            <a rel="next" href="../../issues/issues.html" class="nav-chapters next" title="Next chapter"
+            <a rel="next" href="../../rust/mini-redis/spawning.html" class="nav-chapters next" title="Next chapter"
                 aria-label="Next chapter" aria-keyshortcuts="Right">
                 <i class="fa fa-angle-right"></i>
             </a>
