--- a/print.html
+++ b/print.html
@@ -1711,6 +1711,7 @@ mysqld --user=&lt;USER&gt;
 <p><a href="https://nginx.org/en/docs/http/ngx_http_proxy_module.html">Module ngx_http_proxy_module</a></p>
 <h3 id="保护-host-header"><a class="header" href="#保护-host-header">保护 host header</a></h3>
 <p>在使用 nginx 对 minio 进行反向代理时，遇到了这个 issue <a href="https://github.com/minio/minio/issues/7936">#7936</a> 。原因是没有保护 Host header。</p>
+<p>minio 官方给出的配置如下：</p>
 <pre><code class="language-nginx">server {
  listen 80;
  server_name example.com;
@@ -1732,7 +1733,7 @@ mysqld --user=&lt;USER&gt;
    proxy_connect_timeout 300;
    # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
    proxy_http_version 1.1;
-   proxy_set_header Connection &quot;&quot;; # For HTTP, the proxy_http_version directive should be set to “1.1” and the “Connection” header field should be cleared
+   proxy_set_header Connection &quot;&quot;;
    chunked_transfer_encoding off;
 
    proxy_pass http://localhost:9000; # If you are using docker-compose this would be the hostname i.e. minio
@@ -1740,6 +1741,13 @@ mysqld --user=&lt;USER&gt;
    # /minio/health/live;
  }
 }
+</code></pre>
+<p><a href="http://nginx.org/en/docs/http/ngx_http_upstream_module.html#keepalive">Module ngx_http_upstream_module#keepalive</a> 中提到：</p>
+<blockquote>
+<p>For HTTP, the proxy_http_version directive should be set to “1.1” and the “Connection” header field should be cleared</p>
+</blockquote>
+<pre><code class="language-nginx">proxy_http_version 1.1;
+proxy_set_header Connection &quot;&quot;;
 </code></pre>
 <h3 id="解决跨域"><a class="header" href="#解决跨域">解决跨域</a></h3>
 <pre><code class="language-nginx">location /api {
@@ -1749,9 +1757,17 @@ mysqld --user=&lt;USER&gt;
     proxy_pass https://baidu.com;
 }
 </code></pre>
-<h2 id="location"><a class="header" href="#location">location</a></h2>
+<h2 id="location-块"><a class="header" href="#location-块">location 块</a></h2>
 <p><a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#location">Module ngx_http_core_module#location</a></p>
-<p>路径正则匹配是选择匹配度最高的一条规则（nginx 会先选中前缀最长的，然后在逐个规则匹配，匹配成功后不再继续匹配）</p>
+<p>路径正则匹配是选择匹配度最高的一条规则（nginx 会先选中前缀最长的，然后在逐个规则匹配，匹配成功后不再继续匹配）。</p>
+<p>例如：</p>
+<pre><code class="language-nginx">location /abc {...}
+location /abc/d {...}
+</code></pre>
+<blockquote>
+<p>To find location matching a given request, nginx first checks locations defined using the prefix strings (prefix locations). Among them, the location with the longest matching prefix is selected and remembered. Then regular expressions are checked, in the order of their appearance in the configuration file. The search of regular expressions terminates on the first match, and the corresponding configuration is used.</p>
+</blockquote>
+<p>所以 /abc/d 路径的请求不会被 /abc location 拦截。</p>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h1 id="这里存放一些连接"><a class="header" href="#这里存放一些连接">这里存放一些连接</a></h1>
 <h2 id="tcp"><a class="header" href="#tcp">TCP</a></h2>
